# agent-workflow-kit

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: agent-workflow-kit.md
src/claude_workflow_kit/: __init__.py
src/claude_workflow_kit/assets/agents/: Ada.md  Eco.md  Ive.md  Norwood.md  Sentinel.md  Shelly.md  Zod.md
src/claude_workflow_kit/assets/coding-principles/: testing-strategy.md
src/claude_workflow_kit/assets/guidelines/: file-and-context-optimization.md  tool-utilization.md
src/claude_workflow_kit/assets/templates/: claude-md-section.md.jinja2
src/claude_workflow_kit/assets/workflows/: project-initialization.md  retro.md  tasks-workflow.md
src/claude_workflow_kit/cli/: app.py  install.py  status.py  update.py
src/claude_workflow_kit/core/: claude_md.py  config.py  file_ops.py  manifest.py  registry.py
tests/: conftest.py  test_claude_md.py  test_cli.py  test_config.py  test_file_ops.py  test_integration.py  test_manifest.py
