[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-workflow-kit"
version = "0.3.0"
description = "CLI that packages, installs, and manages Claude Code subagent personas and workflow knowledge assets."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["cli", "claude-code", "agents", "workflows", "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15,<1.0",
    "rich>=13.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/mandelbro/agent-workflow-kit"
Repository = "https://github.com/mandelbro/agent-workflow-kit"
Issues = "https://github.com/mandelbro/agent-workflow-kit/issues"

[project.scripts]
agent-kit = "claude_workflow_kit.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.hatch.build.targets.sdist]
exclude = [".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_workflow_kit"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["claude_workflow_kit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportUnusedFunction = false
include = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
